package Plateau;

public class Terrain {
}
